both legs + left hand started

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -224,12 +224,17 @@ AnimationCurveGroupingDelimiters="._/|\\"
 
 [DetailCustomWidgetExpansion]
 SkeletonEditingTool=SkeletonEditingProperties.Details.Transform
-MeshTopologySelectionMechanicProperties=
+MeshTopologySelectionMechanicProperties=SkeletonEditingProperties.Details.Transform
 ProjectionProperties=SkeletonEditingProperties.Details.Transform
 MirroringProperties=SkeletonEditingProperties.Details.Transform
 OrientingProperties=SkeletonEditingProperties.Details.Transform
 SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
+EditMeshPolygonsToolActions=SkeletonEditingProperties.Details.Transform
+EditMeshPolygonsToolEdgeActions=SkeletonEditingProperties.Details.Transform
+EditMeshPolygonsToolUVActions=SkeletonEditingProperties.Details.Transform
+PolyEditCommonProperties=SkeletonEditingProperties.Details.Transform
+PolyEditTopologyProperties=SkeletonEditingProperties.Details.Transform
 
 [/Script/ClothPainter.ClothPainterSettings]
 ViewMin=0.000000
@@ -242,12 +247,11 @@ Opacity=1.000000
 LastLevel=/Game/BaseMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/Characters/girlbaseA.girlbaseA
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -381,6 +385,33 @@ AssetPropertyPicker.ZoomScale=0
 AssetPropertyPicker.ListViewColumnsManuallyChangedOnce=False
 AssetPropertyPicker.ColumnViewColumnsManuallyChangedOnce=False
 AssetPropertyPicker.ListHiddenColumns=Class
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.IsLocked=False
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.FixedSlotSize0=230
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=1
+ContentBrowserDrawer.VerticalSplitter.SlotSize2=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/Characters
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.ThumbnailSizeGrid=2
+ContentBrowserDrawer.ThumbnailSizeList=2
+ContentBrowserDrawer.ThumbnailSizeCustom=2
+ContentBrowserDrawer.ThumbnailSizeColumn=0
+ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
+ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 
 [DetailCategories]
 Landscape.TransformCommon=True
@@ -990,6 +1021,19 @@ VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
 SkinWeightsPaintToolProperties.Edit Selection=True
 SkinWeightsPaintToolProperties.Edit Weights=True
+ConvertToPolygonsToolProperties.PolyGroups=True
+ConvertToPolygonsToolProperties.NormalDeviation=True
+ConvertToPolygonsToolProperties.Topology=True
+ConvertToPolygonsToolProperties.Filtering=True
+ConvertToPolygonsToolProperties.Display=True
+ConvertToPolygonsToolProperties.Output=True
+EditMeshPolygonsToolActions.FaceEdits=True
+EditMeshPolygonsToolActions.ShapeEdits=True
+EditMeshPolygonsToolEdgeActions.EdgeEdits=True
+EditMeshPolygonsToolUVActions.UVs=True
+PolyEditCommonProperties.Options=True
+PolyEditCommonProperties.Gizmo=True
+PolyEditTopologyProperties.TopologyOptions=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
