--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -247,7 +247,7 @@ Opacity=1.000000
 LastLevel=/Game/BaseMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=
@@ -1158,7 +1158,7 @@ Contexts=(Name="SkeletalMeshEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
-WindowSize=X=1280.000 Y=720.000
+WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -2580,9 +2580,18 @@ ExternalImagePicker.TimeStamp=2026.01.17-01.48.47
 ExternalImagePicker.LastCompileMethod=Unknown
 LauncherServices.TimeStamp=2026.01.17-01.48.51
 LauncherServices.LastCompileMethod=Unknown
+LinuxArm64AudioFeatures.TimeStamp=
+LinuxArm64AudioFeatures.LastCompileMethod=Unknown
+LinuxArm64TargetPlatform.TimeStamp=2025.06.02-15.09.33
+LinuxArm64TargetPlatform.LastCompileMethod=Unknown
+LinuxArm64TargetPlatformSettings.TimeStamp=2025.06.02-15.09.33
+LinuxArm64TargetPlatformSettings.LastCompileMethod=Unknown
+LinuxArm64TargetPlatformControls.TimeStamp=2025.06.02-15.09.33
+LinuxArm64TargetPlatformControls.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Importers/USDImporter/Content/Python/init_unreal.py
 
