rebind bones in hands

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -250,6 +250,7 @@ LastLevel=/Game/BaseMap
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
 
@@ -393,7 +394,7 @@ ContentBrowserDrawer.PathAreaExpanded=True
 ContentBrowserDrawer.PathSearchAreaExpanded=False
 ContentBrowserDrawer.VerticalSplitter.FixedSlotSize0=230
 ContentBrowserDrawer.VerticalSplitter.SlotSize1=1
-ContentBrowserDrawer.VerticalSplitter.SlotSize2=0.75
+ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
@@ -1034,6 +1035,7 @@ EditMeshPolygonsToolUVActions.UVs=True
 PolyEditCommonProperties.Options=True
 PolyEditCommonProperties.Gizmo=True
 PolyEditTopologyProperties.TopologyOptions=True
+SkeletonEditingTool.Component Snapping=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1058,8 +1060,9 @@ InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Characters/girlbaseA
-MRUItem1=/Game/BaseMap
-MRUItem2=/Game/Characters/Body
+MRUItem1=/Game/Characters/girl_base_Skeleton
+MRUItem2=/Game/BaseMap
+MRUItem3=/Game/Characters/Body
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1067,6 +1070,9 @@ DataAsset="\"Object.SkeletalMeshes\" "
 Object=
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
+SkeletalMesh=
+SkinnedAsset=
+StreamableRenderAsset=
 
 [/Script/ControlRigEditor.ControlRigEditModeSettings]
 bDisplayHierarchy=False
@@ -1093,6 +1099,8 @@ LastInViewportTweenWidgetLocation=(X=514.000000,Y=552.000000)
 /Game/Characters/SK_Body.SK_Body=1
 /Game/Characters/ModControlRig2.ModControlRig2=1
 /Game/Characters/girlbaseA.girlbaseA=1
+/Game/Characters/girl_base.girl_base=1
+/Game/Characters/girl_base_Skeleton.girl_base_Skeleton=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1158,7 +1166,7 @@ Contexts=(Name="SkeletalMeshEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
-WindowSize=X=1282.000 Y=722.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [Directories2]
