rigging done. yep
yippee

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -249,8 +249,8 @@ LastLevel=/Game/BaseMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
 
@@ -1059,8 +1059,8 @@ RecentlyPlaced=/Script/CinematicCamera.CameraRig_Crane;
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/girlbaseA
-MRUItem1=/Game/Characters/girl_base_Skeleton
+MRUItem0=/Game/Characters/girl_base_Skeleton
+MRUItem1=/Game/Characters/sm_GirlBody
 MRUItem2=/Game/BaseMap
 MRUItem3=/Game/Characters/Body
 
@@ -1101,6 +1101,7 @@ LastInViewportTweenWidgetLocation=(X=514.000000,Y=552.000000)
 /Game/Characters/girlbaseA.girlbaseA=1
 /Game/Characters/girl_base.girl_base=1
 /Game/Characters/girl_base_Skeleton.girl_base_Skeleton=1
+/Game/Characters/sm_GirlBody.sm_GirlBody=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2599,9 +2600,9 @@ LinuxArm64TargetPlatformControls.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Importers/USDImporter/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/5.6/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=LoadErrors
