--- a/Animation1/Animation1.uproject
+++ b/Animation1/Animation1.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{4DB50331-45EE-9AF6-3F01-D197137D92E5}",
+	"EngineAssociation": "5.6",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
