modular control rig hands and neck

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -224,7 +224,7 @@ AnimationCurveGroupingDelimiters="._/|\\"
 
 [DetailCustomWidgetExpansion]
 SkeletonEditingTool=SkeletonEditingProperties.Details.Transform
-MeshTopologySelectionMechanicProperties=SkeletonEditingProperties.Details.Transform
+MeshTopologySelectionMechanicProperties=
 ProjectionProperties=SkeletonEditingProperties.Details.Transform
 MirroringProperties=SkeletonEditingProperties.Details.Transform
 OrientingProperties=SkeletonEditingProperties.Details.Transform
@@ -235,6 +235,10 @@ EditMeshPolygonsToolEdgeActions=SkeletonEditingProperties.Details.Transform
 EditMeshPolygonsToolUVActions=SkeletonEditingProperties.Details.Transform
 PolyEditCommonProperties=SkeletonEditingProperties.Details.Transform
 PolyEditTopologyProperties=SkeletonEditingProperties.Details.Transform
+ControlRigWrapperObject_FRigControlElement=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
+RigNameMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
+RigElementKeyMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
+RigNameArrayMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 
 [/Script/ClothPainter.ClothPainterSettings]
 ViewMin=0.000000
@@ -249,6 +253,7 @@ LastLevel=/Game/BaseMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=
@@ -1036,6 +1041,32 @@ PolyEditCommonProperties.Options=True
 PolyEditCommonProperties.Gizmo=True
 PolyEditTopologyProperties.TopologyOptions=True
 SkeletonEditingTool.Component Snapping=True
+ControlRigWrapperObject_FRigControlElement.General=True
+ControlRigWrapperObject_FRigControlElement.Control=True
+ControlRigWrapperObject_FRigControlElement.Transform=True
+ControlRigWrapperObject_FRigControlElement.Shape=True
+ControlRigWrapperObject_FRigControlElement.Metadata=True
+Leg_C.General=True
+Leg_C.Connections=True
+Leg_C.Default=True
+Leg_C.Debug=True
+ControlRigWrapperObject_FRigControlElement.MultiParents=True
+ControlRigBlueprint.ClassOptions=True
+ControlRigBlueprint.Modular Rig=True
+ControlRigBlueprint.Imports=True
+ControlRigBlueprint.Hierarchy=True
+ControlRigBlueprint.Interfaces=True
+ControlRigBlueprint.Shapes=True
+ControlRigBlueprint.Drawing=True
+ControlRigBlueprint.Influence Map=True
+ControlRigBlueprint.Control Rig Blueprint=True
+ControlRigBlueprint.Sequencer=True
+ControlRigBlueprint.User Interface=True
+ControlRigBlueprint.VM=True
+ControlRigBlueprint.Python Log Settings=True
+ControlRigBlueprint.Variant=True
+ControlRigBlueprint.BlueprintOptions=True
+ControlRig_GirlBody_C.Default=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1059,10 +1090,11 @@ RecentlyPlaced=/Script/CinematicCamera.CameraRig_Crane;
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/girl_base_Skeleton
-MRUItem1=/Game/Characters/sm_GirlBody
-MRUItem2=/Game/BaseMap
-MRUItem3=/Game/Characters/Body
+MRUItem0=/Game/Characters/ControlRig_GirlBody
+MRUItem1=/Game/Characters/girl_base_Skeleton
+MRUItem2=/Game/Characters/sm_GirlBody
+MRUItem3=/Game/BaseMap
+MRUItem4=/Game/Characters/Body
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1073,6 +1105,10 @@ DeveloperSettings=
 SkeletalMesh=
 SkinnedAsset=
 StreamableRenderAsset=
+ControlRigBlueprint=
+RigVMBlueprint=
+Blueprint=
+BlueprintCore=
 
 [/Script/ControlRigEditor.ControlRigEditModeSettings]
 bDisplayHierarchy=False
@@ -1102,6 +1138,7 @@ LastInViewportTweenWidgetLocation=(X=514.000000,Y=552.000000)
 /Game/Characters/girl_base.girl_base=1
 /Game/Characters/girl_base_Skeleton.girl_base_Skeleton=1
 /Game/Characters/sm_GirlBody.sm_GirlBody=1
+/Game/Characters/ControlRig_GirlBody.ControlRig_GirlBody=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1126,8 +1163,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
