walk to run animation fix + jump animations

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -239,9 +239,18 @@ RigNameMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,Con
 RigElementKeyMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 RigNameArrayMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight
-BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run
+BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.BlendSamples_Samples
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+BP_Player_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_EnhancedInputAction=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+ABP_xBot_C=
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+AnimGraphNode_BlendSpacePlayer=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 
 [/Script/ClothPainter.ClothPainterSettings]
 ViewMin=0.000000
@@ -254,15 +263,19 @@ Opacity=1.000000
 LastLevel=/Game/BaseMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -270,6 +283,11 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IA_Run.IA_Run
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson.IM_ThirdPerson
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Blueprints/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot.ABP_xBot
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1595,6 +1613,37 @@ SkeletalMeshActor.Networking=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
 SkeletalMeshActor.Materials=True
+ABP_xBot_C.Default=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_Root.Bindings=True
+AnimSequence.Interchange =True
+AnimGraphNode_BlendSpacePlayer.Sync=True
+AnimGraphNode_BlendSpacePlayer.Functions=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Tag=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_BlendSpacePlayer.Bindings=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_StateMachine.Functions=True
+AnimGraphNode_StateMachine.Tag=True
+AnimGraphNode_StateMachine.Bindings=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_TransitionResult.Result=True
+AnimGraphNode_TransitionResult.Functions=True
+AnimGraphNode_TransitionResult.Tag=True
+AnimGraphNode_TransitionResult.Bindings=True
+AnimGraphNode_StateResult.Functions=True
+AnimGraphNode_StateResult.Tag=True
+AnimGraphNode_StateResult.Bindings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1620,20 +1669,24 @@ RecentlyPlaced=/Script/CinematicCamera.CameraRig_Crane;
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/xBot_Skeleton
+MRUItem0=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
 MRUItem1=/Game/ThirdPersonCharacter/Animation/BS1D_IdleRun
-MRUItem2=/Game/Characters/xBot
-MRUItem3=/Game/Animations/Jogging
-MRUItem4=/Game/ThirdPersonCharacter/Blueprints/BP_Player
-MRUItem5=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
-MRUItem6=/Game/ThirdPersonCharacter/Input/IA_Turn
-MRUItem7=/Game/ThirdPersonCharacter/Input/IA_MoveRight
-MRUItem8=/Game/ThirdPersonCharacter/Input/IA_MoveForward
-MRUItem9=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
-MRUItem10=/Game/Characters/SK_GirlBody
-MRUItem11=/Game/Characters/SKM_GirlBody
-MRUItem12=/Game/Characters/SM_GirlBody
-MRUItem13=/Game/BaseMap
+MRUItem2=/Game/ThirdPersonCharacter/Input/IA_Jump
+MRUItem3=/Game/Animations/Walking
+MRUItem4=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
+MRUItem5=/Game/ThirdPersonCharacter/Blueprints/BP_Player
+MRUItem6=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
+MRUItem7=/Game/ThirdPersonCharacter/Input/IA_Run
+MRUItem8=/Game/Characters/xBot_Skeleton
+MRUItem9=/Game/Characters/xBot
+MRUItem10=/Game/Animations/Jogging
+MRUItem11=/Game/ThirdPersonCharacter/Input/IA_Turn
+MRUItem12=/Game/ThirdPersonCharacter/Input/IA_MoveRight
+MRUItem13=/Game/ThirdPersonCharacter/Input/IA_MoveForward
+MRUItem14=/Game/Characters/SK_GirlBody
+MRUItem15=/Game/Characters/SKM_GirlBody
+MRUItem16=/Game/Characters/SM_GirlBody
+MRUItem17=/Game/BaseMap
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1651,10 +1704,19 @@ BlueprintCore=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" "
 AnimSequence="\"Object.Animation.PlatformTargetFrameRate\" "
 AnimSequenceBase="\"Object.Animation.PlatformTargetFrameRate\" "
-AnimationAsset="\"Object.Animation.PlatformTargetFrameRate\" "
+AnimationAsset="\"Object.BlendParametersTest.BlendParameters.BlendParameters[0]\" \"Object.BlendParametersTest.BlendParameters.BlendParameters[1]\" "
+BP_Player_C="\"Object.CharacterMovement\" "
+Character="\"Object.CharacterMovement\" "
+Pawn="\"Object.CharacterMovement\" "
+BlendSpace="\"Object.BlendParametersTest.BlendParameters.BlendParameters[0]\" \"Object.BlendParametersTest.BlendParameters.BlendParameters[1]\" "
+CharacterMovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent=
 
 [/Script/ControlRigEditor.ControlRigEditModeSettings]
 bDisplayHierarchy=False
@@ -1696,6 +1758,7 @@ LastInViewportTweenWidgetLocation=(X=514.000000,Y=552.000000)
 /Game/ThirdPersonCharacter/Input/IM_ThirdPerson.IM_ThirdPerson=1
 /Game/Characters/xBot_Skeleton.xBot_Skeleton=1
 /Game/Characters/xBot.xBot=1
+/Game/Animations/Jumping.Jumping=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
